objects/copado__AuxiliaryObject__c.object
<CustomObject>
    <fields>
        <fullName>copado__Continuous_Integration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Continuous Integration</label>
        <referenceTo>copado__Continuous_Integration__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Flow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment Flow</label>
        <referenceTo>copado__Deployment_Flow__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Git_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Git Snapshot</label>
        <referenceTo>copado__Git_Backup__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Git_Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Git Repository</label>
        <referenceTo>copado__Git_Repository__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Org_Difference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Difference</label>
        <referenceTo>copado__OrgDiff__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Selenium_Test_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selenium Test Group</label>
        <referenceTo>copado__Selenium_Test_Group__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Selenium_Test_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selenium Test Run</label>
        <referenceTo>copado__Selenium_Test_Run__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Snapshot_Difference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Snapshot Difference</label>
        <referenceTo>copado__Snapshot_Difference__c</referenceTo>
        <relationshipLabel>AuxiliaryObjects</relationshipLabel>
        <relationshipName>AuxiliaryObjects</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>